Fixed some Americanisms in the UK English

--- a/ckan/i18n/en_GB/LC_MESSAGES/ckan.po
+++ b/ckan/i18n/en_GB/LC_MESSAGES/ckan.po
@@ -1,7 +1,7 @@
 # Translations template for ckan.
 # Copyright (C) 2015 ORGANIZATION
 # This file is distributed under the same license as the ckan project.
-# 
+#
 # Translators:
 # Adrià Mercader <adria.mercader@okfn.org>, 2015
 # darwinp <darwinpeltan@gmail.com>, 2013
@@ -3928,7 +3928,7 @@ msgstr "No groups found"
 #: ckan/templates/snippets/search_result_text.html:27
 msgid "{number} organization found for \"{query}\""
 msgid_plural "{number} organizations found for \"{query}\""
-msgstr[0] "{number} organization found for \"{query}\""
+msgstr[0] "{number} organisation found for \"{query}\""
 msgstr[1] "{number} organisations found for \"{query}\""
 
 #: ckan/templates/snippets/search_result_text.html:28
@@ -3938,7 +3938,7 @@ msgstr "No organisations found for \"{query}\""
 #: ckan/templates/snippets/search_result_text.html:29
 msgid "{number} organization found"
 msgid_plural "{number} organizations found"
-msgstr[0] "{number} organization found"
+msgstr[0] "{number} organisation found"
 msgstr[1] "{number} organisations found"
 
 #: ckan/templates/snippets/search_result_text.html:30
